--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     
     <meta http-equiv="Cache-Control" content="no-siteapp" />
 
-    <title>404 Page not found | Hugo 主题 MemE</title>
+    <title>404 Page not found | answer的世界</title>
 
     <link rel="stylesheet" href="/css/meme.min.003cb7da29e653ca2a4596b8422ba1b3befa27aa0d9c0ecaea4c65d88dbf706e.css"/>
 
@@ -27,16 +27,16 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB&#43;Garamond:ital,wght@0,400;0,500;0,700;1,400;1,700&amp;family=Noto&#43;Serif&#43;SC:wght@400;500;700&amp;family=Source&#43;Code&#43;Pro:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" media="print" onload="this.media='all'" />
         <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB&#43;Garamond:ital,wght@0,400;0,500;0,700;1,400;1,700&amp;family=Noto&#43;Serif&#43;SC:wght@400;500;700&amp;family=Source&#43;Code&#43;Pro:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" /></noscript>
 
-    <meta name="author" content="reuixiy" /><meta name="description" content="MemE 是一个强大且可高度定制的 GoHugo 博客主题，专为个人博客设计。" />
+    <meta name="author" content="answer" /><meta name="description" content="MemE 是一个强大且可高度定制的 GoHugo 博客主题，专为个人博客设计。" />
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#2a6df4" />
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Hugo 主题 MemE" />
+    <meta name="apple-mobile-web-app-title" content="answer的世界" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="Hugo 主题 MemE" />
+    <meta name="application-name" content="answer的世界" />
     <meta name="msapplication-starturl" content="../" />
     <meta name="msapplication-TileColor" content="#fff" />
     <meta name="msapplication-TileImage" content="../icons/mstile-150x150.png" />
@@ -62,7 +62,7 @@
         "license": "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)",
         "publisher": {
             "@type": "Organization",
-            "name": "Hugo 主题 MemE",
+            "name": "answer的世界",
             "logo": {
                 "@type": "ImageObject",
                 "url": "https://jiong952.github.io/icons/apple-touch-icon.png"
@@ -90,7 +90,7 @@
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="MemE 是一个强大且可高度定制的 GoHugo 博客主题，专为个人博客设计。" />
 <meta property="og:url" content="https://jiong952.github.io/404.html" />
-<meta property="og:site_name" content="Hugo 主题 MemE" />
+<meta property="og:site_name" content="answer的世界" />
 <meta property="og:locale" content="zh" /><meta property="og:image" content="https://jiong952.github.io/icons/apple-touch-icon.png" />
     <meta property="og:type" content="website" />
 
