--- a/404.html
+++ b/404.html
@@ -58,14 +58,14 @@
         "url": "https://jiong952.github.io/404.html",
         "name": "404 Page not found",
         "description": "MemE 是一个强大且可高度定制的 GoHugo 博客主题，专为个人博客设计。",
-        "image": "https://jiong952.github.io/icons/apple-touch-icon.png",
+        "image": "https://jiong952.github.io/icons/logo.png",
         "license": "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)",
         "publisher": {
             "@type": "Organization",
             "name": "answer的世界",
             "logo": {
                 "@type": "ImageObject",
-                "url": "https://jiong952.github.io/icons/apple-touch-icon.png"
+                "url": "https://jiong952.github.io/icons/logo.png"
             },
             "url": "https://jiong952.github.io/"
         },
@@ -91,7 +91,7 @@
 <meta property="og:description" content="MemE 是一个强大且可高度定制的 GoHugo 博客主题，专为个人博客设计。" />
 <meta property="og:url" content="https://jiong952.github.io/404.html" />
 <meta property="og:site_name" content="answer的世界" />
-<meta property="og:locale" content="zh" /><meta property="og:image" content="https://jiong952.github.io/icons/apple-touch-icon.png" />
+<meta property="og:locale" content="zh" /><meta property="og:image" content="https://jiong952.github.io/icons/logo.png" />
     <meta property="og:type" content="website" />
 
 
